# Zephyr

./: west.yml
boards/arm/mr_canhubk3/: mr_canhubk3-pinctrl.dtsi  mr_canhubk3.dts
boards/arm/vmu_rt1170/: vmu_rt1170-pinctrl.dtsi  vmu_rt1170.dts
boards/nxp/kw45b41z_evk/: Kconfig.defconfig  Kconfig.kw45b41z_evk  board.cmake  board.yml  kw45b41z_evk_defconfig
boards/nxp/vmu_rt1170/: vmu_rt1170_mimxrt1176_cm7.dts
boards/shields/mr_canhubk3_adap/: Kconfig.shield  mr_canhubk3_adap.overlay
boards/shields/x_nucleo_iks01a4/: x_nucleo_iks01a4.overlay
drivers/clock_control/: CMakeLists.txt  Kconfig.mcux_scg  clock_control_mcux_scg_k4.c
drivers/gnss/: CMakeLists.txt  Kconfig  Kconfig.u_blox_m10  gnss_dump.c  gnss_nmea0183_match.c  gnss_publish.c  gnss_u_blox_m10.c  gnss_u_blox_protocol.c  u_blox_protocol.c  u_blox_protocol.h  u_blox_protocol_defines.h
drivers/gnss/gnss_u_blox_protocol/: gnss_u_blox_protocol.c  gnss_u_blox_protocol.h  gnss_u_blox_protocol_defines.h
drivers/gnss/u_blox_protocol/: u_blox_protocol.c  u_blox_protocol.h  u_blox_protocol_defines.h
drivers/i2c/: i2c_tca954x.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/fxls8971cf/: CMakeLists.txt  Kconfig  fxls8971cf.c
drivers/sensor/ina226/: Kconfig  ina226.c  ina226.h
modules/: Kconfig.st
modules/cmsis/: cmsis_core_m.h
samples/revb_speed_control/: CMakeLists.txt
samples/sensor/ina226/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/sensor/ina226/boards/: mr_canhubk3.overlay
samples/sensor/ina226/src/: main.c
subsys/modem/: Kconfig  modem_chat.c  modem_ubx.c
(+130 files in other folders)
